User form - address - change names, add postal code, add autocomplete

--- a/app/AccountModule/templates/Register.default.latte
+++ b/app/AccountModule/templates/Register.default.latte
@@ -36,4 +36,6 @@
 		{*<div n:name="recaptcha"></div>*}
 	{*</div>*}
 
+	<script type="application/javascript" src="{$baseUrl}/js/address-dropdown.js"></script>
+
 {/block}
