--- a/app/MemberModule/templates/User.edit.latte
+++ b/app/MemberModule/templates/User.edit.latte
@@ -53,4 +53,6 @@
 	{control addMemberForm}
 {/if}
 
+<script type="application/javascript" src="{$baseUrl}/js/address-dropdown.js"></script>
+
 {/block}
