--- a/app/MemberModule/templates/User.vcf.latte
+++ b/app/MemberModule/templates/User.vcf.latte
@@ -2,10 +2,10 @@ BEGIN:VCARD
 VERSION:2.1
 N:{$member->name};{$member->surname}
 FN:{$member->surname}, {$member->name}
-ORG:VZS CCK MS JBC
+ORG:VZS CCK Jablonec nad Nisou
 TEL;CELL;VOICE:{$member->telefon}
 TEL;HOME;VOICE:{$member->telefon2}
-ADR;HOME:;;{$member->ulice};{$member->mesto};;;CZ
+ADR;HOME:;;{$member->street} {$member->street_number};{$member->city};{$member->postal_code};;CZ
 EMAIL;PREF;INTERNET:{$member->mail}
 EMAIL:{$member->mail2}
 END:VCARD
