--- a/app/AccountModule/templates/@layout.latte
+++ b/app/AccountModule/templates/@layout.latte
@@ -39,7 +39,7 @@
 
 		<nav class="row">
 			<ul id="menu" class="box">
-				<li><a n:href=":Member:News:">MEMBER</a></li>
+				<li><a n:href=":Member:News:">INTRANET</a></li>
 				<li><a href="http://photo.vzs-jablonec.cz">PHOTO</a></li>
 				<li><a n:href=":Account:Sign:">ACCOUNT</a></li>
 			</ul>
