--- a/app/MemberModule/templates/ServiceRecord.default.latte
+++ b/app/MemberModule/templates/ServiceRecord.default.latte
@@ -15,72 +15,69 @@
 
 {block #content}
     <main>
-    <aside>
-        <nav>
-            <ol>
-                <li n:foreach="$list as $item">
-                    <a n:tag-if="($item != $day)" n:href="default, $year, $item">{$item|date:'d.m.Y'}</a>
-                </li>
-            </ol>
-        </nav>
-    </aside>
-
-    <article n:ifset="$record">
-        <h2>{$record->date|date:'%A %d. %B %Y'}</h2>
-
-        <div class="prev-next">
-            <a n:tag-if="$next" class="buttonLike float-right" n:href="default, $year, $next">
-                <span n:tag-if="!$next" class="buttonLike float-right gray">Další {include svg forward}</span>
-            </a>
-
-            <a n:tag-if="$prev" class="buttonLike" n:href="default, $year, $prev">
-                <span n:tag-if="!$prev" class="buttonLike gray">{include svg backward} Předchozí</span>
-            </a>
-
-            <p class="clearfix"></p>
+    <article>
+        <h2>Denní záznamy</h2>
+        <div class="record">
+            <table>
+                <thead>
+                <tr>
+                    <th>Datum</th>
+                    <th>Návštěvnost</th>
+                    <th>Počasí</th>
+                    <th>Zapsal</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr n:foreach="$dayRecords as $day => $record">
+                    <td><a n:href="view, $year, $day">{$day|date:'d.m.Y'}</a></td>
+                    <td>{$record->attendance}</td>
+                    <td>{$record->weather}</td>
+                    <td>
+                        {$record->author}
+                        {$record->datetime|date:'d.m.Y H:i:s'}
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
 
-        <div class="texy">{$record->message|nl2br}</div>
-
-        <h3>Počasí</h3>
-        <div class="texy">{$record->weather|nl2br}</div>
-
-        <p class="record"><strong>Návštěvnost:</strong> {$record->attendance}</p>
-
-        <p class="record"><strong>Čísla záznamů o ošetření:</strong> {foreach $record->medicalRecords as $item}<a href="https://www.vzs.evidsoft.cz/admin/parere/edit-parere?entity_ID={$item}" target="_blank">{$item}</a>{sep}, {/sep}{/foreach}</p>
-
-        <h3>Ve službě</h3>
+        <h2>Ve službě</h2>
         <div class="record">
             <table>
                 <thead>
                     <tr>
-                        <th>Příjmení a jméno</th>
+                        <th>Datum</th>
                         <th>Od</th>
                         <th>Do</th>
+                        <th>Příjmení a jméno</th>
                         <th>Pozice</th>
                         <th>Kvalifikace</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr n:foreach="$record->serviceRecords as $service">
-                        <td>{$service->person}</td>
+                {foreach $serviceRecords as $day => $records}
+                    <tr n:foreach="$records as $service">
+                        <td><a n:href="view, $year, $day">{$day|date:'d.m.Y'}</a></td>
                         <td>{$service->fromTime}</td>
                         <td>{$service->toTime}</td>
+                        <td>{$service->person}</td>
                         <td>{$service->position}</td>
                         <td>{$service->qualifications}</td>
                     </tr>
+                {/foreach}
                 </tbody>
             </table>
         </div>
 
-        <h3>Lodní deník</h3>
+        <h2>Lodní deník</h2>
         <div class="record">
             <table>
                 <thead>
                     <tr>
-                        <th>Loď</th>
+                        <th>Datum</th>
                         <th>Od</th>
                         <th>Do</th>
+                        <th>Loď</th>
                         <th>VMP</th>
                         <th>Účel</th>
                         <th>MH před</th>
@@ -90,10 +87,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr n:foreach="$record->boatRecords as $boat">
-                        <td>{$boat->boat}
+                {foreach $boatRecords as $day => $records}
+                    <tr n:foreach="$records as $boat">
+                        <td><a n:href="view, $year, $day">{$day|date:'d.m.Y'}</a></td>
                         <td>{$boat->fromTime}</td>
                         <td>{$boat->toTime}</td>
+                        <td>{$boat->boat}</td>
                         <td>{$boat->vmp}</td>
                         <td>{$boat->purpose}</td>
                         <td>{$boat->motoHoursBefore}</td>
@@ -101,11 +100,30 @@
                         <td>{$boat->fuel}</td>
                         <td>{$boat->note}</td>
                     </tr>
+                {/foreach}
                 </tbody>
             </table>
         </div>
 
-        <p class="record"><strong>Zapsal:</strong> {$record->author} {$record->datetime|date:'d.m.Y H:i:s'}</p>
+        <h2>Záznamy o ošetření</h2>
+        <div class="record">
+            <table>
+                <thead>
+                <tr>
+                    <th>Datum</th>
+                    <th>Číslo záznamu o ošetření</th>
+                </tr>
+                </thead>
+                <tbody>
+                {foreach $medicalRecords as $day => $records}
+                <tr n:foreach="$records as $item">
+                    <td><a n:href="view, $year, $day">{$day|date:'d.m.Y'}</a></td>
+                    <td><a href="https://www.vzs.evidsoft.cz/admin/parere/edit-parere?entity_ID={$item}" target="_blank">{$item}</a></td>
+                </tr>
+                {/foreach}
+                </tbody>
+            </table>
+        </div>
 
     </article>
     </main>
