--- a/app/MemberModule/templates/User.vcf.latte
+++ b/app/MemberModule/templates/User.vcf.latte
@@ -3,8 +3,8 @@ VERSION:2.1
 N:{$member->name};{$member->surname}
 FN:{$member->surname}, {$member->name}
 ORG:VZS CCK Jablonec nad Nisou
-TEL;CELL;VOICE:{$member->telefon}
-TEL;HOME;VOICE:{$member->telefon2}
+TEL;CELL;VOICE:{$member->phone}
+TEL;HOME;VOICE:{$member->phone2}
 ADR;HOME:;;{$member->street} {$member->street_number};{$member->city};{$member->postal_code};;CZ
 EMAIL;PREF;INTERNET:{$member->mail}
 EMAIL:{$member->mail2}
