User table - columns - evidsoft ID - TYPO

--- a/app/MemberModule/components/UserGridControlColumns.latte
+++ b/app/MemberModule/components/UserGridControlColumns.latte
@@ -29,7 +29,7 @@
 {/define}
 
 {define cell-evidsoft_id}
-	{if $cell}<a href="https://www.vzs.evidsoft.cz/admin/person/edit-person?entity_ID={$cell}">{$cell}</a>>{/if}
+	{if $cell}<a href="https://www.vzs.evidsoft.cz/admin/person/edit-person?entity_ID={$cell}">{$cell}</a>{/if}
 {/define}
 
 {define cell-phone}
