--- a/www/css/member.mobile.css
+++ b/www/css/member.mobile.css
@@ -1,5 +1,5 @@
 #menu {float: none; line-height: 2.5em; margin-top: 1em}
-#menu li {display: inline-block; line-height: 1.2em; width: auto; margin-top: 1ex; padding: 0.3ex; }
+#menu li {display: inline-block; line-height: 1.2em; width: auto; margin-top: 1ex; margin-bottom: 0; padding: 0.3ex; }
 #menu li a {text-align: center; padding-left: 0.2em; }
 #menu li a .icon {font-size: 120%}
 #menu li a span {display: inline-block; max-width: 0; vertical-align: top; overflow: hidden; transition: max-width 1s;}
